# qbdevice-ros2-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
api/qbdevice-api-7.x.x/: CHANGELOG.rst
api/qbdevice-api-7.x.x/qbrobotics-driver/libs/research/: qbapi_research.pro
api/qbdevice-api-7.x.x/qbrobotics-driver/libs/research/include/qbrobotics_research_api/: qbrobotics_research_api.h  qbrobotics_research_commands.h  qbsoftclaw_api.h  qbsofthand_research_api.h
api/qbdevice-api-7.x.x/qbrobotics-driver/libs/research/src/: qbmove_research_api.cpp  qbsoftclaw_api.cpp  qbsofthand2_research_api.cpp  qbsofthand_research_api.cpp
api/qbdevice-api-7.x.x/qbrobotics-driver/tests/: qbrobotics_research_api_communication.cpp  qbrobotics_research_api_wrapper_communication.cpp
api/qbdevice-api-7.x.x/serial/: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SerialConfig.cmake  serial.pro
api/qbdevice-api-7.x.x/serial/include/serial/: serial.h
api/qbdevice-api-7.x.x/serial/src/impl/: impl_win.cpp
api/qbdevice-api-7.x.x/serial/src/impl/list_ports/: list_ports_macos.cpp
debian/: changelog  control  copyright  gbp.conf  rules
launch/: device_bringup.launch
qb_device/: CHANGELOG.rst  package.xml
qb_device_bringup/: package.xml
qb_device_bringup/launch/: device_spawner_and_opt_bringup.launch.py
qb_device_driver/: package.xml
qb_device_driver/api/qbdevice-api-7.x.x/: .gitmodules  CMakeLists.txt  README.md
qb_device_driver/api/qbdevice-api-7.x.x/qbrobotics-driver/: CHANGELOG.rst  CMakeLists.txt  README.md  qbrobotics_driverConfig.cmake.in
qb_device_driver/api/qbdevice-api-7.x.x/qbrobotics-driver/libs/research/include/qbrobotics_research_api/: qbmove_research_api.h  qbrobotics_research_api_wrapper.h  qbsofthand2_research_api.h
qb_device_driver/api/qbdevice-api-7.x.x/qbrobotics-driver/libs/research/src/: qbrobotics_research_api.cpp  qbrobotics_research_api_wrapper.cpp
qb_device_driver/api/qbdevice-api-7.x.x/serial/: CHANGELOG.rst  CMakeSettings.json  LICENSE  SerialConfig.cmake.in
qb_device_driver/api/qbdevice-api-7.x.x/serial/include/serial/impl/: impl.h
qb_device_driver/api/qbdevice-api-7.x.x/serial/src/: serial.cpp
qb_device_driver/api/qbdevice-api-7.x.x/serial/src/impl/: impl_unix.cpp
qb_device_driver/api/qbdevice-api-7.x.x/serial/src/impl/list_ports/: list_ports_linux.cpp  list_ports_win.cpp
qb_device_driver/include/qb_device_driver/: qb_device_communication_handler.h
qb_device_driver/launch/: communication_handler.launch.py
qb_device_driver/src/: qb_device_communication_handler.cpp
qb_device_msgs/: CMakeLists.txt
qb_device_ros2_control/: CHANGELOG.rst  package.xml  qb_device_ros2_control.xml
qb_device_ros2_control/hardware/: qb_device_ros2_control.cpp
qb_device_ros2_control/hardware/include/qb_device_ros2_control/: qb_device_ros2_control.hpp
qb_device_test_controllers/: CHANGELOG.rst  publisher_joint_trajectory_controller.py  setup.cfg  setup.py
rpm/: ros-humble-qb-device-driver.spec  ros-humble-qb-device-test-controllers.spec  template.spec
src/: main.cpp
srv/: GetMeasurements.srv  Trigger.srv
