<package format="3">
  <name>qb_device_msgs</name>
  <version>4.1.3</version>
  <description>
    This package contains the device-independent custom ROS messages for qbrobotics® devices.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="support@qbrobotics.com">qb Support Team</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbdevice-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbdevice-ros</url>
  <url type="website">http://wiki.ros.org/qb_device_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>