<package format="2">
  <name>qb_device_bringup</name>
  <version>4.1.3</version>
  <description>
    This package contains a device-independent bringup utilities for qbrobotics® devices.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="support@qbrobotics.com">qb Support Team</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbdevice-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbdevice-ros</url>
  <url type="website">http://wiki.ros.org/qb_device_bringup</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>