<package format="2">
  <name>qb_device_driver</name>
  <version>4.1.3</version>
  <description>
    This package contains a device-independent API wrapper for qbrobotics® devices.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="support@qbrobotics.com">qb Support Team</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbdevice-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbdevice-ros</url>
  <url type="website">http://wiki.ros.org/qb_device_driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>qb_device_msgs</depend>
  <depend>rclcpp</depend>


  <!--TODO: <test_depend>gtest</test_depend>-->
  <doc_depend>doxygen</doc_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>